--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,10 @@ pylatex
 stanfordnlp
 conllu
 overrides
-https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.4/en_core_sci_sm-0.2.4.tar.gz
 ray
 hug
 pyjnius
 bencode.py
 cloudpickle
 h5py
-pattern
+mlconjug3
